--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@eslint/js": "^9.32.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/chai": "^4.3.16",
     "@types/mocha": "^10.0.7",
@@ -92,6 +92,7 @@
     "hardhat": "^2.22.6",
     "lovable-tagger": "^1.1.10",
     "postcss": "^8.5.6",
+    "supabase": "^2.48.3",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
