--- a/gateway/package.json
+++ b/gateway/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "ipfs-http-client": "^60.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
