--- a/gateway/package.json
+++ b/gateway/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "express": "^5.1.0",
-    "ipfs-http-client": "^60.0.1"
+    "ipfs-http-client": "^60.0.1",
+    "merkletreejs": "^0.6.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.2",
     "ts-node": "^10.9.2",
