feat: add placeholder for bitcoin anchoring logic

--- a/gateway/package.json
+++ b/gateway/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bitcoinjs-lib": "^7.0.0",
     "crypto-js": "^4.2.0",
     "express": "^5.1.0",
     "ipfs-http-client": "^60.0.1",
     "merkletreejs": "^0.6.0"
   },
   "devDependencies": {
+    "@types/bitcoinjs-lib": "^4.0.1",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.2",
