--- a/gateway/package.json
+++ b/gateway/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "axios": "^1.12.2",
     "bitcoinjs-lib": "^7.0.0",
     "crypto-js": "^4.2.0",
+    "ecpair": "^3.0.0",
     "express": "^5.1.0",
     "ipfs-http-client": "^60.0.1",
-    "merkletreejs": "^0.6.0"
+    "merkletreejs": "^0.6.0",
+    "tiny-secp256k1": "^2.2.4"
   },
   "devDependencies": {
     "@types/bitcoinjs-lib": "^4.0.1",
