--- a/gateway/package.json
+++ b/gateway/package.json
@@ -10,7 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "axios": "^1.12.2",
     "bitcoinjs-lib": "^7.0.0",
