feat(gateway): add bip39 and hdkey for key derivation

--- a/gateway/package.json
+++ b/gateway/package.json
@@ -13,10 +13,12 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.12.2",
+    "bip39": "^3.1.0",
     "bitcoinjs-lib": "^7.0.0",
     "crypto-js": "^4.2.0",
     "ecpair": "^3.0.0",
     "express": "^5.1.0",
+    "hdkey": "^2.1.0",
     "ipfs-http-client": "^60.0.1",
     "merkletreejs": "^0.6.0",
     "tiny-secp256k1": "^2.2.4"
