--- a/gateway/package.json
+++ b/gateway/package.json
@@ -2,33 +2,34 @@
   "name": "gateway",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --loader ts-node/esm src/index.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
+    "@stacks/network": "^6.14.0",
     "axios": "^1.12.2",
-    "bip39": "^3.1.0",
-    "bitcoinjs-lib": "^7.0.0",
+    "bitcoinjs-lib": "^6.1.6",
+    "body-parser": "^1.20.2",
     "crypto-js": "^4.2.0",
-    "ecpair": "^3.0.0",
+    "dotenv": "^16.4.5",
+    "ecpair": "^2.1.0",
     "express": "^5.1.0",
-    "hdkey": "^2.1.0",
-    "ipfs-http-client": "^60.0.1",
-    "merkletreejs": "^0.6.0",
-    "tiny-secp256k1": "^2.2.4"
+    "merkletreejs": "^0.4.0",
+    "tiny-secp256k1": "^2.2.3",
+    "ts-node": "^10.9.2",
+    "winston": "^3.14.1"
   },
   "devDependencies": {
-    "@types/bitcoinjs-lib": "^4.0.1",
+    "@types/body-parser": "^1.19.5",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "nodemon": "^3.1.4",
+    "typescript": "^5.5.4"
   }
 }
