--- a/gateway/tsconfig.json
+++ b/gateway/tsconfig.json
@@ -4,7 +4,9 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": "./src",
-    "outDir": "./dist",
+    "declaration": true,
+    "outDir": "dist",
+    "sourceMap": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
