--- a/gateway/package.json
+++ b/gateway/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "start": "node --loader ts-node/esm src/index.ts",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
+    "start": "ts-node-esm src/index.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node-esm' src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,7 @@
   "dependencies": {
     "@stacks/network": "^6.14.0",
     "axios": "^1.12.2",
-    "bitcoinjs-lib": "^6.1.6",
+    "bitcoinjs-lib": "^7.0.0",
     "body-parser": "^1.20.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
